--- a/src/Agronomia.Api/Agronomia.Api.csproj
+++ b/src/Agronomia.Api/Agronomia.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -14,15 +14,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Asp.Versioning.Http" />
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" />
+    <PackageReference Include="FluentValidation" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
+    <PackageReference Include="WolverineFx" />
+    <PackageReference Include="WolverineFx.Http.FluentValidation" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Agronomia.Angular\Agronomia.Angular.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="..\Agronomia.Application\Agronomia.Application.csproj" />
+    <ProjectReference Include="..\Agronomia.Crosscutting\Agronomia.Crosscutting.csproj" />
+    <ProjectReference Include="..\Agronomia.Domain\Agronomia.Domain.csproj" />
+    <ProjectReference Include="..\Agronomia.Infrastructure\Agronomia.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
