feat: user auth flow

--- a/src/Agronomia.Api/Agronomia.Api.csproj
+++ b/src/Agronomia.Api/Agronomia.Api.csproj
@@ -11,6 +11,7 @@
     <SpaRoot>..\Agronomia.Angular</SpaRoot>
     <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
     <SpaProxyServerUrl>https://localhost:64165</SpaProxyServerUrl>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
