--- a/src/Agronomia.Angular/package.json
+++ b/src/Agronomia.Angular/package.json
@@ -12,6 +12,11 @@
     "start:default": "ng serve --ssl --ssl-cert \"$HOME/.aspnet/https/${npm_package_name}.pem\" --ssl-key \"$HOME/.aspnet/https/${npm_package_name}.key\" --host=127.0.0.1"
   },
   "private": true,
+  "pnpm": {
+    "overrides": {
+      "undici": "^7.18.2"
+    }
+  },
   "dependencies": {
     "@angular/common": "^21.1.0",
     "@angular/compiler": "^21.1.0",
