--- a/src/Agronomia.Api/appsettings.Development.json
+++ b/src/Agronomia.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "WriteDatabase": "Host=agronomia-db.postgres.database.azure.com;Port=5432;Database=agronomia;Username=agronomia;Password=nipdDBPbaq92kZCn;",
+    "ReadDatabase": "Host=agronomia-db.postgres.database.azure.com;Port=5432;Database=agronomia;Username=agronomia;Password=nipdDBPbaq92kZCn;"
   }
 }
