feat(application): establish CQRS pipeline and Wolverine integration

--- a/src/Agronomia.Application/Agronomia.Application.csproj
+++ b/src/Agronomia.Application/Agronomia.Application.csproj
@@ -15,6 +15,7 @@
       <PackageReference Include="FluentValidation" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
       <PackageReference Include="Microsoft.Extensions.Options" />
+      <PackageReference Include="WolverineFx" />
     </ItemGroup>
 
 </Project>
