--- a/src/Agronomia.Infrastructure/Agronomia.Infrastructure.csproj
+++ b/src/Agronomia.Infrastructure/Agronomia.Infrastructure.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" />
         <PackageReference Include="Microsoft.SemanticKernel" />
         <PackageReference Include="Microsoft.SemanticKernel.Connectors.Google" />
+        <PackageReference Include="WolverineFx" />
     </ItemGroup>
 
     <ItemGroup>
