feat(identity): add password recovery

--- a/src/Agronomia.Api/appsettings.json
+++ b/src/Agronomia.Api/appsettings.json
@@ -10,7 +10,7 @@
     "Secret": "",
     "Issuer": "Agronomia.Api",
     "Audience": "Agronomia.Client",
-    "ExpiryMinutes": 60
+    "ExpiresInMinutes": 60
   },
   "BlobStorage": {
     "ConnectionString": "",
