--- a/src/Agronomia.Infrastructure/Agronomia.Infrastructure.csproj
+++ b/src/Agronomia.Infrastructure/Agronomia.Infrastructure.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Dapper" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" />
         <PackageReference Include="Microsoft.Extensions.Configuration" />
@@ -28,8 +29,11 @@
 
     <ItemGroup>
         <Folder Include="Persistence\Configurations\" />
-        <Folder Include="Persistence\Migrations\" />
         <Folder Include="Persistence\Repositories\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
     
 </Project>
